# yk-hospital-data-review-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  environment.yml  pyproject.toml
app/yk_review_agent/: __init__.py  main.py
app/yk_review_agent/core/: config.py
app/yk_review_agent/db/: __init__.py
app/yk_review_agent/models/: analysis.py  business_request.py  chat.py  intent.py  session.py
app/yk_review_agent/services/: agent.py  answerability_policy.py  business_request_service.py  followup_resolver.py  function_resolver.py  intent_parser.py  metric_catalog.py  pgta_detail_dataset.py  pgta_record_source.py  pgta_sqlite.py  pgtsr_record_source.py  pgtsr_sqlite.py  pgtsr_translocation.py  product_snapshot_registry.py  query_service.py  question_normalizer.py  report_service.py  (+2 more)
deploy/: backend.server.env.example  docker-compose.server.yml
docs/: DataWowsight对照分析.md  IT接入与交付说明.md  LLM语义路由架构演进方案-20260708.md  PGT-demo数据库字段需求清单.md  PGT-demo自然语言问题与标准答案.md  PGTA-SQLite表结构设计稿-20260706.md  PGTAH数据统计输出-2025年-上传微盘.xlsx  PGTA指标计算说明-20260701.md  PGTA特殊CNV口径核对-20260703.md  PGTA问法标准答案基线-20260702.md  PGTA需要统计的指标-20260701.xlsx  PGTSR指标统计共识-20260707.md  PGTSR数据统计输出-2025年.xlsx  Session4-SQLite平表设计稿-20260703.md  Session4-测试性能与本地分析存储开发记录-20260703.md  Session6-封装和部署规划-20260708.md  V0.2路由语料回归说明.md  人工测试说明.md  回答协议与卡片Schema.md  多线程开发规划.md  当前产品边界速记.md  执行级技术架构方案.md  结构化业务统计请求设计.md  部署说明.md
docs/IT/: statistics_current_table.xlsx  statistics_detail.xlsx  生信数据库字段核对表.xlsx
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
project-skills/yk-review-agent-product-development/: SKILL.md
scripts/: smoke_docker.sh
tests/: conftest.py  test_agent_response.py  test_answerability_policy.py  test_demo_metadata.py  test_function_resolver.py  test_intent_parser_followup.py  test_pgta_answer_oracle.py  test_pgta_sqlite.py  test_pgtsr_sqlite.py  test_query_service.py  test_question_normalizer.py  test_report_service.py  test_session_store.py  test_snapshot_registry.py
(+17 files in other folders)
