[project]
name = "yk-hospital-data-review-agent"
version = "0.1.0"
description = "Hospital data review agent for PGT analytics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "openpyxl>=3.1.5",
  "pydantic-ai>=0.0.24",
  "pydantic-settings>=2.6.0",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
markers = [
  "unit: fast tests that do not load workbook fixtures or run the full agent stack",
  "integration: tests that exercise data loading or multi-service behavior",
  "oracle: tests that validate business numbers against oracle workbook snapshots",
  "agent: tests that run the conversation agent/service response stack",
  "slow: tests excluded from the default local pytest run",
]
